--- a/index.html
+++ b/index.html
@@ -29,3 +29,44 @@
 
 </body>
 </html>
+
+<!-- Janelle Salisbury -->
+<!-- Mobile Interfaces and Usability -->
+<!--1109 -->
+<!-- Project 1 -->
+
+<!DOCTYPE html>
+<html lang = "en">
+    <head>
+      <meta charset = "UTF-8">
+      <title>Car Parts I Need</title>
+      <meta name = "Janelle Salisbury" content = "Parts">
+      <meta name="HandheldFriendly" content="True">
+	  <meta name="MobileOptimized" content="320"/>
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <meta http-equiv="cleartype" content="on">
+      <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+    <div id = "container">
+       <div id = "header">
+             <fieldset>
+                <legend>Add Parts Now</legend>
+                <div class = "margin" id = "main">
+                   <img src = "Image/mjauto2.png">
+                   <p>Add parts that need to be purchased for your vehicle and keep a detailed listing.</p>
+                   <td>Search:<input type = "text" name = "search" size = "50"> <input type = "submit" value = "Search"></td><br>
+                   <img src = "Image/car2.png" width = 400 ><br>
+                   <dt><a href = "additem.html"><input class ="cta" input type = "button" value = "Get great parts here!"></a></dt><br>
+             <fieldset>
+                <legend>Browse Parts</legend>
+                   <dt><a class = "browse" href = "additem.html"><input class = "cta" input type = "button" value = "Brakes"</a></dt>
+                   <dt><a class = "browse" href = "additem.html"><input class = "cta" input type = "button" value = "Engine"</a></dt>
+                   <dt><a class = "browse" href = "additem.html"><input class = "cta" input type = "button" value = "Body"</a></dt>
+                   <dt><a class = "browse" href = "additem.html"><input class = "cta" input type = "button" value = "Lighting"</a></dt>
+                   <dt><a class = "browse" href = "additem.html"><input class = "cta" input type = "button" value = "Interior"</a></dt>
+            </fieldset>
+                </div>
+             </fieldset>
+    </body>      
+</html>
