--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 	  <meta name="MobileOptimized" content="320"/>
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <meta http-equiv="cleartype" content="on">
-      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="style.css">
+      <script src="js/libs/modernizr.custom.min.js"></script>
     </head>
     <body>
     <div id = "container">
@@ -53,10 +54,10 @@
              <fieldset>
                 <legend>Add Parts Now</legend>
                 <div class = "margin" id = "main">
-                   <img src = "Image/mjauto2.png">
+                   <img src = "images/mjauto2.png">
                    <p>Add parts that need to be purchased for your vehicle and keep a detailed listing.</p>
                    <td>Search:<input type = "text" name = "search" size = "50"> <input type = "submit" value = "Search"></td><br>
-                   <img src = "Image/car2.png" width = 400 ><br>
+                   <img src = "images/car2.png" width = 400 ><br>
                    <dt><a href = "additem.html"><input class ="cta" input type = "button" value = "Get great parts here!"></a></dt><br>
              <fieldset>
                 <legend>Browse Parts</legend>
