so the background color and buttons wont style like they did in Project 1.

--- a/additem.html
+++ b/additem.html
@@ -12,7 +12,7 @@
       <title> Car Parts I need</title>
       <meta name = "Janelle Salisbury" content = "Parts">
       
-      <link rel ="stylesheet" href ="style.css">
+      <link rel ="stylesheet" href ="styles.css">
     </head>
     
     <body>
