--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	  <meta name="MobileOptimized" content="320"/>
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <meta http-equiv="cleartype" content="on">
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="styles.css">
       <script src="js/libs/modernizr.custom.min.js"></script>
     </head>
     <body>
