--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <meta name="HandheldFriendly" content="True">
 	  <meta name="MobileOptimized" content="320"/>
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  
 	  <meta http-equiv="cleartype" content="on">
+	  
       <link rel="stylesheet" href="styles.css">
       <script src="js/libs/modernizr.custom.min.js"></script>
     </head>
@@ -36,6 +38,10 @@
                    <dt><a class = "browse" href = "additem.html"><input class = "cta" input type = "button" value = "Interior"</a></dt>
             </fieldset>
                 </div>
-             </fieldset>
+            </fieldset>
+     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0b2/jquery.mobile-1.0b2.min.css" />
+     <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
+     <script src="http://code.jquery.com/mobile/1.0b2/jquery.mobile-1.0b2.min.js"></script>
+     <script type = "text/javascript" src = "js/main.js"></script>
     </body>      
 </html>
