--- a/additem.html
+++ b/additem.html
@@ -23,7 +23,7 @@
              <legend>Add Items</legend>
              <div class = "margin" id ="main">
              
-                <img src ="images/mjauto2.png"> 
+                <img src ="Image/mjauto2.png"> 
                 <h1>Select Category</h1>
            
                 <select>
