WOOO HOOOO I GOT IT!

--- a/index.html
+++ b/index.html
@@ -29,17 +29,18 @@
         <td>Search:<input type = "text" name = "search" size = "50"> <input type = "submit" value = "Search"></td><br>
         <div data-role = "content">
                 <p>Add parts need for your vehicle and keep a detailed listing.</p>
-                <p><a href = "#brakes">Brake Assembly</a> </p>
-                <p><a href = "#engine"> Engine Assembly</a></p>
-                <p><a href = "#body">Body Assembly</a></p>
-                <p><a href = "#lighting">Lighting Assembly</a></p>
+                <p><a href = "#brakes" data-role = "button" data-icon = "arrow-r" data-iconpos = "right">Brake Assembly</a> </p>
+                <p><a href = "#engine" data-role = "button" data-icon = "arrow-r" data-iconpos = "right"> Engine Assembly</a></p>
+                <p><a href = "#body" data-role = "button" data-icon = "arrow-r" data-iconpos = "right">Body Assembly</a></p>
+                <p><a href = "#lighting" data-role = "button" data-icon = "arrow-r" data-iconpos = "right">Lighting Assembly</a></p>
+                <p><a href = "#interior" data-role = "button" data-icon = "arrow-r" data-iconpos = "right">Interior Assembly</a></p>
         </div>
         <div data-role = "footer" data-position = "fixed">
                 <h4>Footer</h4>
         </div>
    </div>
            
-        <div data-role ="page" id ="brakes">
+        <div data-role ="page" id ="brakes" data-add-back-btn = "true">
             <div data-role ="header" data-position ="fixed">
                  <h1>Brake Assembly</h1>
             </div>
@@ -51,7 +52,7 @@
         </div>
    </div>
    
-        <div data-role ="page" id ="engine"
+        <div data-role ="page" id ="engine" data-add-back-btn = "true">
             <div data-role = "header" data-position = "fixed">
                  <h1>Engine Assembly</h1>
             </div>
@@ -63,7 +64,7 @@
             </div>
    </div>
    
-        <div data-role ="page" id = "body">
+        <div data-role ="page" id = "body" data-add-back-btn = "true">
             <div data-role = "header" data-position = "fixed">
                  <h1>Body Assembly</h1>
             </div>
@@ -74,7 +75,7 @@
                  <h4>Footer</h4>
             </div>
    </div>
-        <div data-role ="page" id = "lighting">
+        <div data-role ="page" id = "lighting" data-add-back-btn = "true">
             <div data-role = "header" data-position = "fixed">
                  <h1>Lighting Assembly</h1>
             </div>
@@ -85,7 +86,7 @@
                  <h4>Footer</h4>
             </div>
    </div>
-        <div data-role ="page" id = "interior">
+        <div data-role ="page" id = "interior" data-add-back-btn = "true">
             <div data-role = "header" data-position = "fixed">
                  <h1>Interior Assembly</h1>
             </div>
