--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <td>Search:<input type = "text" name = "search" size = "50"> <input type = "submit" value = "Search"></td><br>
         <div data-role = "content">
                 <p>Add parts need for your vehicle and keep a detailed listing.</p>
-                <p><a href = "#brakes" data-role = "button" data-icon = "arrow-r" data-iconpos = "right">Brake Assembly</a> </p>
-                <p><a href = "#engine" data-role = "button" data-icon = "arrow-r" data-iconpos = "right"> Engine Assembly</a></p>
-                <p><a href = "#body" data-role = "button" data-icon = "arrow-r" data-iconpos = "right">Body Assembly</a></p>
-                <p><a href = "#lighting" data-role = "button" data-icon = "arrow-r" data-iconpos = "right">Lighting Assembly</a></p>
-                <p><a href = "#interior" data-role = "button" data-icon = "arrow-r" data-iconpos = "right">Interior Assembly</a></p>
+                <p><a href = "#brakes" data-theme = "b" data-role = "button" data-icon = "arrow-r" data-iconpos = "right">Brake Assembly</a> </p>
+                <p><a href = "#engine" data-theme = "b"data-role = "button" data-icon = "arrow-r" data-iconpos = "right"> Engine Assembly</a></p>
+                <p><a href = "#body" data-theme = "b" data-role = "button" data-icon = "arrow-r" data-iconpos = "right">Body Assembly</a></p>
+                <p><a href = "#lighting" data-theme = "b" data-role = "button" data-icon = "arrow-r" data-iconpos = "right">Lighting Assembly</a></p>
+                <p><a href = "#interior" data-theme = "b" data-role = "button" data-icon = "arrow-r" data-iconpos = "right">Interior Assembly</a></p>
         </div>
         <div data-role = "footer" data-position = "fixed">
                 <h4>Footer</h4>
@@ -45,7 +45,39 @@
                  <h1>Brake Assembly</h1>
             </div>
         <div data-role ="content">
-                <p>Brake Parts here</p>
+            <ul data-role = "listview">
+                <li>
+                   <a href = "brakes.html">
+                       <image src = "Image/car2.png"/>
+                       <h3>Brake Pads</h3>
+                       <p>Find brands here</p>
+                   </a>
+                </li>
+                <li>
+                   <a href = "brakes.html">
+                       <image src = "Image/car2.png"/>
+                       <h3>Calipers</h3>
+                       <p>Find brands here</p>
+                   </a>
+</li>
+                <li>
+                   <a href = "brakes.html">
+                       <image src = "Image/car2.png"/>
+                       <h3>Rotors</h3>
+                       <p>Find brands here</p>
+                   </a>
+
+                </li>
+                <li>
+                   <a href = "brakes.html">
+                       <image src = "Image/car2.png"/>
+                       <h3>Lugnuts</h3>
+                       <p>Find brands here</p>
+                   </a>
+
+                
+                </li>
+            </ul>
         </div>
         <div data-role = "footer" data-position = "fixed"
                 <h4>Footer</h4>
@@ -57,7 +89,36 @@
                  <h1>Engine Assembly</h1>
             </div>
             <div data-role = "content">
-                  <p>Engine Parts here</p>
+                <ul data-role = "listview">
+                    <li>
+                       <a href = "engine.html">
+                           <image src = "Image/car2.png"/>
+                           <h3>Water Pump</h3>
+                           <p>Find brands here</p>
+                       </a>
+                    </li>
+                    <li>
+                       <a href = "engine.html">
+                           <image src = "Image/car2.png"/>
+                           <h3>Timing Belt</h3>
+                           <p>Find brands here</p>
+                       </a>
+                    </li>
+                    <li>
+                       <a href = "engine.html">
+                           <image src = "Image/car2.png"/>
+                           <h3>Idler Pulley</h3>
+                           <p>Find brands here</p>
+                       </a>
+                    </li>
+                    <li>
+                       <a href = "engine.html">
+                           <image src = "Image/car2.png"/>
+                           <h3>Crank Seal</h3>
+                           <p>Find brands here</p>
+                       </a>
+                    </li>
+                </ul>
             </div>
             <div data-role = "footer" data-position = "fixed">
                  <h4>Footer</h4>
@@ -69,7 +130,36 @@
                  <h1>Body Assembly</h1>
             </div>
             <div data-role = "content">
-                  <p>Body Parts here</p>
+                 <ul data-role = "listview">
+                    <li>
+                       <a href = "body.html">
+                           <image src = "Image/car2.png"/>
+                           <h3>Hood</h3>
+                           <p>Find brands here</p>
+                       </a>
+                    </li>
+                    <li>
+                       <a href = "body.html">
+                           <image src = "Image/car2.png"/>
+                           <h3>Quarter Panel</h3>
+                           <p>Find brands here</p>
+                       </a>
+                    </li>
+                    <li>
+                       <a href = "body.html">
+                           <image src = "Image/car2.png"/>
+                           <h3>Fender</h3>
+                           <p>Find brands here</p>
+                       </a>
+                    </li>
+                    <li>
+                       <a href = "body.html">
+                           <image src = "Image/car2.png"/>
+                           <h3>Bumper</h3>
+                           <p>Find brands here</p>
+                       </a>
+                       </li>
+                 </ul> 
             </div>
             <div data-role = "footer" data-position = "fixed">
                  <h4>Footer</h4>
@@ -80,7 +170,36 @@
                  <h1>Lighting Assembly</h1>
             </div>
             <div data-role = "content">
-                  <p>Lighting Parts here</p>
+                  <ul data-role = "listview">
+                    <li>
+                       <a href = "lighting.html">
+                           <image src = "Image/car2.png"/>
+                           <h3>Dash Lights</h3>
+                           <p>Find brands here</p>
+                       </a>
+                    </li>
+                    <li>
+                       <a href = "lighting.html">
+                           <image src = "Image/car2.png"/>
+                           <h3>Head Lights</h3>
+                           <p>Find brands here</p>
+                       </a>
+                    </li>
+                    <li>
+                       <a href = "lighting.html">
+                           <image src = "Image/car2.png"/>
+                           <h3>Tail Lights</h3>
+                           <p>Find brands here</p>
+                       </a>
+                    </li>
+                    <li>
+                       <a href = "lighting.html">
+                           <image src = "Image/car2.png"/>
+                           <h3>Signal Lights</h3>
+                           <p>Find brands here</p>
+                       </a>
+                       </li>
+                       </ul>
             </div>
             <div data-role = "footer" data-position = "fixed">
                  <h4>Footer</h4>
@@ -91,7 +210,12 @@
                  <h1>Interior Assembly</h1>
             </div>
             <div data-role = "content">
-                  <p>Interior Parts here</p>
+                  <ul data-role = "listview">
+                    <li>Seats</li>
+                    <li>Carpeting</li>
+                    <li>Console</li>              
+                    <li>Belts</li>
+                </ul>
             </div>
             <div data-role = "footer" data-position = "fixed">
                  <h4>Footer</h4>
