well this is as far as im going to get

--- a/index.html
+++ b/index.html
@@ -211,10 +211,35 @@
             </div>
             <div data-role = "content">
                   <ul data-role = "listview">
-                    <li>Seats</li>
-                    <li>Carpeting</li>
-                    <li>Console</li>              
-                    <li>Belts</li>
+                    <li>
+                       <a href = "interior.html">
+                           <image src = "Image/car2.png"/>
+                           <h3>Seats</h3>
+                           <p>Find brands here</p>
+                       </a>
+                       </li>
+                    <li>
+                       <a href = "interior.html">
+                           <image src = "Image/car2.png"/>
+                           <h3>Carpeting</h3>
+                           <p>Find brands here</p>
+                       </a>
+                       </li>
+                    <li>
+                       <a href = "interior.html">
+                           <image src = "Image/car2.png"/>
+                           <h3>Console</h3>
+                           <p>Find brands here</p>
+                       </a>
+                       </li>
+                    <li>
+                       <a href = "interior.html">
+                           <image src = "Image/car2.png"/>
+                           <h3>Belts</h3>
+                           <p>Find brands here</p>
+                       </a>
+                       </li>
+
                 </ul>
             </div>
             <div data-role = "footer" data-position = "fixed">
