Rick made me do it

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <h1>Car Parts I Need</h1>
             </div>
         <img src ="Image/mjauto2.png"> 
+        <img src ="Image/car2.png"
         <td>Search:<input type = "text" name = "search" size = "50"> <input type = "submit" value = "Search"></td><br>
         <div data-role = "content">
                 <p>Add parts need for your vehicle and keep a detailed listing.</p>
@@ -262,5 +263,6 @@
      <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
      <script src="http://code.jquery.com/mobile/1.0b2/jquery.mobile-1.0b2.min.js"></script>
      <script type = "text/javascript" src = "js/main.js"></script>
+     <script type = "text/javascript" src = "js/JSON.js"></script>
     </body>      
 </html>
