Rick is still making me do it

--- a/additem.html
+++ b/additem.html
@@ -2,6 +2,7 @@
 <!-- Mobile Interfaces and Usability --> 
 <!-- 1109-->
 <!-- Project 2 -->
+<!-- Rick was here -->
 
 <!DOCTYPE html>
 <html lang = "en">
